# speech-automation-rs

./: model.sh
speech-rs/: .gitignore  Cargo.toml  README.md  decoder_prompt.md
speech-rs/src/: main.rs
speech-rs/src/audio/: capture.rs  load.rs  mod.rs
speech-rs/src/config/: logging.rs  logic.rs  mod.rs  types.rs
speech-rs/src/config/specs/: config.toml  vocab.txt
speech-rs/src/model/: canary.rs  decoder.rs  encoder.rs  fbank.rs  load.rs  mod.rs  tensor.rs  tokenizer.rs
